fix layout bug

--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -8,6 +8,13 @@
 @font-face {
                                 font-family: 'HelveticaNeue';
                                 font-display: swap;
+                                src: url("../fonts/HelveticaNeue-Medium.woff2") format("woff2"), url("../fonts/HelveticaNeue-Medium.woff") format("woff");
+                                font-weight: 500;
+                                font-style: normal;
+                            }
+@font-face {
+                                font-family: 'HelveticaNeue';
+                                font-display: swap;
                                 src: url("../fonts/HelveticaNeue-Thin.woff2") format("woff2"), url("../fonts/HelveticaNeue-Thin.woff") format("woff");
                                 font-weight: 100;
                                 font-style: normal;
@@ -20,13 +27,6 @@
                                 font-style: normal;
                             }
 @font-face {
-                                font-family: 'HelveticaNeue';
-                                font-display: swap;
-                                src: url("../fonts/HelveticaNeue-Medium.woff2") format("woff2"), url("../fonts/HelveticaNeue-Medium.woff") format("woff");
-                                font-weight: 500;
-                                font-style: normal;
-                            }
-@font-face {
                                 font-family: 'SFProDisplay';
                                 font-display: swap;
                                 src: url("../fonts/SFProDisplay-Bold.woff2") format("woff2"), url("../fonts/SFProDisplay-Bold.woff") format("woff");
@@ -34,23 +34,9 @@
                                 font-style: normal;
                             }
 @font-face {
-                                font-family: 'SFProDisplay';
-                                font-display: swap;
-                                src: url("../fonts/SFProDisplay-Heavy.woff2") format("woff2"), url("../fonts/SFProDisplay-Heavy.woff") format("woff");
-                                font-weight: 800;
-                                font-style: normal;
-                            }
-@font-face {
                                 font-family: 'icons';
                                 font-display: swap;
-                                src: url("../fonts/icons.woff2?v=1777055310779") format("woff2"), url("../fonts/icons.woff?v=1777055310779") format("woff");
-                                font-weight: 400;
-                                font-style: normal;
-                            }
-@font-face {
-                                font-family: 'SFProDisplay';
-                                font-display: swap;
-                                src: url("../fonts/SFProDisplay-Regular.woff2") format("woff2"), url("../fonts/SFProDisplay-Regular.woff") format("woff");
+                                src: url("../fonts/icons.woff2?v=1777102762053") format("woff2"), url("../fonts/icons.woff?v=1777102762053") format("woff");
                                 font-weight: 400;
                                 font-style: normal;
                             }
@@ -80,5 +66,19 @@
                                 font-display: swap;
                                 src: url("../fonts/SFProDisplay-Thin.woff2") format("woff2"), url("../fonts/SFProDisplay-Thin.woff") format("woff");
                                 font-weight: 100;
+                                font-style: normal;
+                            }
+@font-face {
+                                font-family: 'SFProDisplay';
+                                font-display: swap;
+                                src: url("../fonts/SFProDisplay-Heavy.woff2") format("woff2"), url("../fonts/SFProDisplay-Heavy.woff") format("woff");
+                                font-weight: 800;
+                                font-style: normal;
+                            }
+@font-face {
+                                font-family: 'SFProDisplay';
+                                font-display: swap;
+                                src: url("../fonts/SFProDisplay-Regular.woff2") format("woff2"), url("../fonts/SFProDisplay-Regular.woff") format("woff");
+                                font-weight: 400;
                                 font-style: normal;
                             }
