--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -437,15 +437,15 @@
 	}
 
 	&.btn-secondary {
-		background: #192a3f;
+		background: #437EBF;
 		color: #ffffff;
 
 		&:hover {
-			background: #203145;
+			background: #4982C1;
 		}
 
 		&:active {
-			background: #172639;
+			background: #3C72AC;
 		}
 	}
 
