--- a/src/scss/pages/case.scss
+++ b/src/scss/pages/case.scss
@@ -102,6 +102,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        gap: 1rem;
 
         @media (min-width:$md2) {
             flex: 0 0 rem(620);
@@ -121,10 +122,6 @@
 
     // .heading__title
     &__title {
-        &:not(:first-child) {
-            margin-top: 1rem;
-
-        }
 
         &.title-sm {
             @media (max-width:$md4) {
@@ -143,7 +140,6 @@
 
     // .heading__description
     &__description {
-        margin-top: 1rem;
         color: #7C8698;
         font-size: 1.125rem;
         font-weight: 300;
@@ -152,7 +148,7 @@
 
     // .heading__actions
     &__actions {
-        margin-top: 2rem;
+        margin-top: auto;
         display: flex;
         gap: 0.5rem;
         flex-direction: column;
@@ -173,10 +169,18 @@
         border-radius: 1rem;
         overflow: hidden;
         min-height: rem(192);
-        height: 100%;
+
 
         @media (min-width:$md3) {
             display: block;
+
+            position: relative;
+
+            & img {
+                position: absolute;
+                top: 0;
+                left: 0;
+            }
 
         }
     }
@@ -1128,11 +1132,12 @@
 
     // .cases__grid
     &__grid {
-        margin-top: 2rem;
+        margin-top: 1.5rem;
         display: grid;
         gap: 1.5rem;
 
         @media (min-width:$md3) {
+            margin-top: 2rem;
             gap: 2rem;
             grid-template-columns: repeat(2, 1fr);
         }
@@ -1326,5 +1331,11 @@
     // .case-card__metrics
     &__metrics {
         margin-top: 1.3rem;
+
+        .metrics__item {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr)
+        }
+
     }
 }
