--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -506,31 +506,53 @@
 	line-height: 1.3;
 	color: #7C8698;
 
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		&:first-child {
-			margin-top: 0;
-		}
+	// h2,
+	// h3,
+	// h4,
+	// h5,
+	// h6 {
+	// 	&:first-child {
+	// 		margin-top: 0;
+	// 	}
 
-		margin: 2.5rem 0 2rem;
+	// 	margin: 2.5rem 0 2rem;
 
-		@media (min-width:$md4) {
-			margin: 2.5rem 0 1.5rem;
+	// 	@media (min-width:$md4) {
+	// 		margin: 2.5rem 0 1.5rem;
 
-		}
+	// 	}
 
-		@extend .gradient-text;
-		@extend .title-xs;
-	}
+
+	// 	@extend .title-xs;
+	// }
 
 	h1 {
 		margin-top: 0;
 		margin-bottom: 2.4rem;
 		@extend .gradient-text;
-		@extend .title-lg;
+		// @extend .title-lg;
+		@extend .title-sm;
+	}
+
+	& h2,
+	& h3,
+	& h4,
+	& h5,
+	& h6 {
+		font-size: 1rem;
+		letter-spacing: 0.035rem;
+		font-weight: 700;
+
+		&:first-child {
+			margin-top: 0;
+		}
+
+		margin: 2rem 0 1rem;
+		@extend .gradient-text;
+	}
+
+	& h2 {
+		font-size: 1.25rem;
 	}
 
 
@@ -563,20 +585,14 @@
 			line-height: 130%;
 
 			&:not(:last-child) {
-				margin-bottom: 1.35rem;
-
-				@media (min-width:$md4) {
-					margin-bottom: 0;
-				}
+				margin-bottom: 1rem;
 			}
 
-			@media (min-width:$md4) {
-				line-height: 200%;
-			}
+
 
 			@media (min-width:$md4) {
 				position: relative;
-				padding-left: 1em;
+				padding-left: 1.1em;
 
 				&::before {
 
@@ -607,7 +623,7 @@
 				border-radius: 50%;
 
 				@media (min-width:$md4) {
-					top: 0.85rem;
+					top: 0.5rem;
 				}
 			}
 		}
